# agent_sim

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  RESUME_LOG.md  agent_sim  demo  docker-compose.yml  start.sh
agents/: __init__.py
art/: extract_kenney_swap.py  extract_overworld_tiles.py  extract_vegetation.py  install_buildings_v1.py  install_forest_sheet.py  install_transitions_dirt.py  install_transitions_v1.py  intake.py  make_tiles_seamless.py  strip_bleed_lines.py  strip_edge_cliffs.py  strip_white_border.py  style.json  synthesize_bridge_edges.py  synthesize_water_corners.py
deploy/: README.md  fly.toml
docs/: AFFORDANCE_MANIFEST.md  AGENT_API.md  AGENT_ARCHITECTURE_PLAN.md  AGENT_MOVEMENT_REDESIGN.md  ANTI_MESS_PLAN.md  ARCHETYPE_FSMS.md  ARCHITECTURE.md  ART_PIPELINE.md  ART_STYLE_GUIDE.md  AUDIT_2026-06-07.md  AUDIT_FINDINGS_2026-06-08.md  AUDIT_FINDINGS_2026-06-10.md  AUDIT_FINDINGS_2026-06-10_enginecore.md  BENCHMARK_PLAN.md  CLEANUP_PLAN.md  CONSTRUCTION_PROCEDURAL.md  DECISIONS.md  ELDORIA_WORLD_DESIGN.md  ENVIRONMENT_AUDIT_PLAN.md  EXECUTION_BLUEPRINT.md  EXPERIMENT_SYSTEM_PLAN.md  FRONTEND_RENDERING.md  INTERIORS_MULTIMAP_PLAN.md  JUNE_2026_PUSH_RESULTS.md  (+16 more)
sdk/python/: README.md  pyproject.toml
sdk/python/agent_sim_sdk/: __init__.py  client.py  models.py  observation_render.py  pathfind.py
sdk/python/tests/: test_action_batch.py  test_claude_agent_harness.py  test_harness_verb_coverage.py  test_heuristic_bot_logic.py  test_integration_scenarios.py  test_local_view.py  test_no_engine_imports.py  test_observation_render.py  test_qwen_llm.py
(+450 files in other folders)
