[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sim-sdk"
version = "0.0.1"
description = "Python client SDK for connecting an agent to an agent_sim world."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_sim_sdk*"]
